--- a/frontend/admin/data_modul/topik.html
+++ b/frontend/admin/data_modul/topik.html
@@ -149,17 +149,17 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="./data_modul/pengabdian.html">
+                                        <a href="import_soal.html">
                                             <span class="sub-item">Import Soal</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="./data_modul/pengabdian.html">
+                                        <a href="pengabdian.html">
                                             <span class="sub-item">Daftar Soal</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="./data_modul/pengabdian.html">
+                                        <a href="pengabdian.html">
                                             <span class="sub-item">File Manager</span>
                                         </a>
                                     </li>
