--- a/frontend/admin/data_modul/soal.html
+++ b/frontend/admin/data_modul/soal.html
@@ -44,28 +44,42 @@
     <div class="wrapper">
         <div class="main-header">
             <!-- Logo Header -->
-            <div class="logo-header" data-background-color="blue">
-
-                <a href="index.html" class="logo">
-                    <img src="/assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
+            <div class="logo-header">
+                <a href="#" class="logo">
+                    <img src="/assets/images/CBT.png"
+                        style="width:205px; height:42px;margin-top: 10px;margin-bottom: 18px;margin-left: -24px;"
+                        alt="navbar brand" class="navbar-brand">
                 </a>
                 <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
                     data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">
-                        <i class="icon-menu"></i>
+                        <i class="fas fa-ellipsis-v"></i>
                     </span>
                 </button>
-                <button class="topbar-toggler more"><i class="icon-options-vertical"></i></button>
+                <button class="topbar-toggler more">
+                    <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M17.0312 7C17.2656 7 17.5 6.80469 17.5 6.53125V4.96875C17.5 4.73438 17.2656 4.5 17.0312 4.5H13.75V1.21875C13.75 0.984375 13.5156 0.75 13.2812 0.75H11.7188C11.4453 0.75 11.25 0.984375 11.25 1.21875V6.0625C11.25 6.60938 11.6406 7 12.1875 7H17.0312ZM6.25 6.0625V1.21875C6.25 0.984375 6.01562 0.75 5.78125 0.75H4.21875C3.94531 0.75 3.75 0.984375 3.75 1.21875V4.5H0.46875C0.195312 4.5 0 4.73438 0 4.96875V6.53125C0 6.80469 0.195312 7 0.46875 7H5.3125C5.82031 7 6.25 6.60938 6.25 6.0625ZM6.25 17.7812V12.9375C6.25 12.4297 5.82031 12 5.3125 12H0.46875C0.195312 12 0 12.2344 0 12.4688V14.0312C0 14.3047 0.195312 14.5 0.46875 14.5H3.75V17.7812C3.75 18.0547 3.94531 18.25 4.21875 18.25H5.78125C6.01562 18.25 6.25 18.0547 6.25 17.7812ZM13.75 17.7812V14.5H17.0312C17.2656 14.5 17.5 14.3047 17.5 14.0312V12.4688C17.5 12.2344 17.2656 12 17.0312 12H12.1875C11.6406 12 11.25 12.4297 11.25 12.9375V17.7812C11.25 18.0547 11.4453 18.25 11.7188 18.25H13.2812C13.5156 18.25 13.75 18.0547 13.75 17.7812Z"
+                            fill="#0E2F73" />
+                    </svg>
+                </button>
                 <div class="nav-toggle">
                     <button class="btn btn-toggle toggle-sidebar">
-                        <i class="icon-menu"></i>
+                        <div class="navbar-toggler-icon">
+                            <svg width="18" height="19" viewBox="0 0 18 19" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M17.0312 7C17.2656 7 17.5 6.80469 17.5 6.53125V4.96875C17.5 4.73438 17.2656 4.5 17.0312 4.5H13.75V1.21875C13.75 0.984375 13.5156 0.75 13.2812 0.75H11.7188C11.4453 0.75 11.25 0.984375 11.25 1.21875V6.0625C11.25 6.60938 11.6406 7 12.1875 7H17.0312ZM6.25 6.0625V1.21875C6.25 0.984375 6.01562 0.75 5.78125 0.75H4.21875C3.94531 0.75 3.75 0.984375 3.75 1.21875V4.5H0.46875C0.195312 4.5 0 4.73438 0 4.96875V6.53125C0 6.80469 0.195312 7 0.46875 7H5.3125C5.82031 7 6.25 6.60938 6.25 6.0625ZM6.25 17.7812V12.9375C6.25 12.4297 5.82031 12 5.3125 12H0.46875C0.195312 12 0 12.2344 0 12.4688V14.0312C0 14.3047 0.195312 14.5 0.46875 14.5H3.75V17.7812C3.75 18.0547 3.94531 18.25 4.21875 18.25H5.78125C6.01562 18.25 6.25 18.0547 6.25 17.7812ZM13.75 17.7812V14.5H17.0312C17.2656 14.5 17.5 14.3047 17.5 14.0312V12.4688C17.5 12.2344 17.2656 12 17.0312 12H12.1875C11.6406 12 11.25 12.4297 11.25 12.9375V17.7812C11.25 18.0547 11.4453 18.25 11.7188 18.25H13.2812C13.5156 18.25 13.75 18.0547 13.75 17.7812Z"
+                                    fill="#0E2F73" />
+                            </svg>
+                        </div>
                     </button>
                 </div>
             </div>
             <!-- End Logo Header -->
 
             <!-- Navbar Header -->
-            <nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
+            <nav class="navbar navbar-header navbar-expand-lg" data-background-color="purple">
                 <div class="container-fluid">
                     <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
                         <li class="nav-item dropdown hidden-caret submenu">
